--- a/package.json
+++ b/package.json
@@ -2,18 +2,30 @@
 	"name": "react-example",
 	"version": "1.0.0",
 	"description": "",
-	"main": "public/index.html",
+	"main": "server.js",
 	"scripts": {
+        "start": "node server.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack -w"
 	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/KevinAngeles/utnytreact.git"
+	},
+	"bugs": {
+		"url": "https://github.com/KevinAngeles/utnytreact/issues"
+	},
+	"homepage": "https://github.com/KevinAngeles/utnytreact#readme",
 	"author": "Kevin Angeles",
 	"license": "ISC",
 	"dependencies": {
-		"react": "^0.14.3",
-		"react-dom": "^0.14.3",
-		"react-router": "^2.4.1",
 		"axios": "^0.12.0",
+		"body-parser": "^1.15.2",
+    	"express": "^4.14.0",
+		"morgan": "^1.7.0",
+		"react": "^0.14.3",
+		"react-router": "^2.4.1",
+		"react-dom": "^0.14.3",
 		"request": "^2.72.0"
 	},
 	"devDependencies": {
