--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-        "start": "node server.js",
+        "start": "node ./bin/www",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack -w"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/KevinAngeles/utnytreact.git"
+		"url": "git+https://github.com/KevinAngeles/nytreact.git"
 	},
 	"bugs": {
-		"url": "https://github.com/KevinAngeles/utnytreact/issues"
+		"url": "https://github.com/KevinAngeles/nytreact/issues"
 	},
-	"homepage": "https://github.com/KevinAngeles/utnytreact#readme",
+	"homepage": "https://github.com/KevinAngeles/nytreact#readme",
 	"author": "Kevin Angeles",
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.12.0",
 		"body-parser": "^1.15.2",
     	"express": "^4.14.0",
+        "mongoose": "^4.5.1",
 		"morgan": "^1.7.0",
 		"react": "^0.14.3",
 		"react-router": "^2.4.1",
