--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-        "start": "node ./bin/www",
+		"start": "node ./bin/www",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack -w"
 	},
@@ -19,21 +19,22 @@
 	"author": "Kevin Angeles",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^0.12.0",
+		"axios": "^0.15.3",
 		"body-parser": "^1.15.2",
-    	"express": "^4.14.0",
-        "mongoose": "^4.5.1",
+		"react": "^15.4.1",
+		"react-dom": "^15.4.1",
+		"react-router": "^3.0.0",
+		"react-addons-update": "^15.4.1",
+		"express": "^4.14.0",
+		"mongoose": "^4.7.4",
 		"morgan": "^1.7.0",
-		"react": "^0.14.3",
-		"react-router": "^2.4.1",
-		"react-dom": "^0.14.3",
-		"request": "^2.72.0"
+		"request": "^2.79.0"
 	},
 	"devDependencies": {
-		"babel-core": "^6.3.13",
-		"babel-loader": "^6.2.0",
-		"babel-preset-es2015": "^6.3.13",
-		"babel-preset-react": "^6.3.13",
-		"webpack": "^1.13.1"
+		"babel-core": "^6.21.0",
+		"babel-loader": "^6.2.10",
+		"babel-preset-es2015": "^6.18.0",
+		"babel-preset-react": "^6.16.0",
+		"webpack": "^1.14.0"
 	}
 }
