Results were updated with new NYT api key (Snippet). Bundle generated by webpack was deleted because a postinstallation script was included in package.json. The postinstallation script will automatically generate the bundle.js after running npm install.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "nytreact",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "",
 	"main": "server.js",
 	"scripts": {
 		"start": "node ./bin/www",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack -w"
+		"build": "webpack -w",
+		"postinstall": "./node_modules/.bin/webpack"
 	},
 	"repository": {
 		"type": "git",
