--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nytreact",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"description": "",
 	"main": "server.js",
 	"scripts": {
@@ -20,22 +20,27 @@
 	"author": "Kevin Angeles",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^0.15.3",
-		"body-parser": "^1.15.2",
-		"react": "^15.4.1",
-		"react-dom": "^15.4.1",
-		"react-router": "^3.0.0",
-		"react-addons-update": "^15.4.1",
-		"express": "^4.14.0",
-		"mongoose": "^4.7.4",
-		"morgan": "^1.7.0",
-		"request": "^2.79.0"
+		"axios": "^0.18.0",
+		"body-parser": "^1.18.3",
+		"express": "^4.16.3",
+		"moment": "^2.22.2",
+		"mongoose": "^5.1.3",
+		"morgan": "^1.9.0",
+		"react": "^16.4.0",
+		"react-addons-update": "^15.6.2",
+		"react-dates": "^16.7.0",
+		"react-dom": "^16.4.0",
+		"request": "^2.87.0"
 	},
 	"devDependencies": {
-		"babel-core": "^6.21.0",
-		"babel-loader": "^6.2.10",
-		"babel-preset-es2015": "^6.18.0",
-		"babel-preset-react": "^6.16.0",
-		"webpack": "^1.14.0"
+		"babel-core": "^6.26.3",
+		"babel-loader": "^7.1.4",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-2": "^6.24.1",
+		"css-loader": "^0.28.11",
+		"style-loader": "^0.21.0",
+		"webpack": "^4.10.2",
+		"webpack-cli": "^3.0.1"
 	}
 }
