--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nytreact",
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"description": "",
 	"main": "server.js",
 	"scripts": {
@@ -20,27 +20,33 @@
 	"author": "Kevin Angeles",
 	"license": "ISC",
 	"dependencies": {
+		"@babel/polyfill": "^7.0.0",
 		"axios": "^0.18.0",
 		"body-parser": "^1.18.3",
-		"express": "^4.16.3",
+		"express": "^4.16.4",
 		"moment": "^2.22.2",
-		"mongoose": "^5.1.3",
-		"morgan": "^1.9.0",
-		"react": "^16.4.0",
+		"mongoose": "^5.3.12",
+		"morgan": "^1.9.1",
+		"react": "^16.6.3",
 		"react-addons-update": "^15.6.2",
-		"react-dates": "^16.7.0",
-		"react-dom": "^16.4.0",
-		"request": "^2.87.0"
+		"react-dates": "^18.2.2",
+		"react-dom": "^16.6.3",
+		"request": "^2.88.0"
 	},
 	"devDependencies": {
-		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.4",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-react": "^6.24.1",
-		"babel-preset-stage-2": "^6.24.1",
-		"css-loader": "^0.28.11",
-		"style-loader": "^0.21.0",
-		"webpack": "^4.10.2",
-		"webpack-cli": "^3.0.1"
+		"@babel/core": "^7.1.6",
+		"@babel/preset-env": "^7.1.6",
+		"@babel/preset-react": "^7.0.0",
+		"@babel/register": "^7.0.0",
+		"babel-loader": "^8.0.4",
+		"css-loader": "^1.0.1",
+		"html-loader": "^0.5.5",
+		"html-webpack-plugin": "^3.2.0",
+		"mini-css-extract-plugin": "^0.4.4",
+		"node-sass": "^4.10.0",
+		"sass-loader": "^7.1.0",
+		"style-loader": "^0.23.1",
+		"webpack": "^4.25.1",
+		"webpack-cli": "^3.1.2"
 	}
 }
